Fixes #41
Enable scrolling of button area in the waiting queue when the column is too narrow to fit all the buttons.
Moved the "enable-delete" toggle to the list header rather than an action button at the bottom to simplify the bottom button area.

--- a/vueapp/src/assets/styles/custom.css
+++ b/vueapp/src/assets/styles/custom.css
@@ -16,3 +16,19 @@
 .courts {
   width: 60%;
 }
+
+.queue-top {
+  height: 88%;
+}
+
+.queue-bottom {
+  height: 15%;
+  overflow: auto;
+  text-align: center;
+  justify-content: space-evenly;
+}
+
+.ghost {
+  opacity: 0.5;
+  background: #c8ebfb;
+}
